--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>   <script src="js/covid.js"></script>
     <script src="js/covid.js"></script>
-    
+
 <title>COVID19 Vaccine booking</title>
 </head>
 
 
 <body>
-
-
+<h3> COVID VACCINE BOOKING</h3>
+<p>Please select the page to be redirected</p>
+<ul>
+    <li>Main</li>
+    <li><a href="vaccinePages/booking.html">Vaccine Booking</a></li>
+    <li><a href="vaccinePages/listing.html">Booking Listing</a></li>
+</ul>
     
 </body>
 </html> 
