--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
 
 
 <body>
-<h3> COVID VACCINE BOOKING</h3>
+<header> </header>
+
+
 <p>Please select the page to be redirected</p>
 <ul>
-    <li>Main</li>
+    <li><a href="index.html">Main</a></li>
     <li><a href="vaccinePages/booking.html">Vaccine Booking</a></li>
     <li><a href="vaccinePages/listing.html">Booking Listing</a></li>
 </ul>
-    
+
+
+
+
+<footer id="foot">
+    <h4> abdulnmo/Davis/2/Apr/21</h4>
+</footer>
 </body>
 </html> 
