--- a/vaccinePages/booking.html
+++ b/vaccinePages/booking.html
@@ -25,7 +25,23 @@
 
 <h2> Vaccine Booking</h2>
 <form>
-<input type="date" name="bookDate" value="2021-05-05" min="2021-01-01" max="2022-01-01">
+<label>Date:</label><input type="date" name="bookDate" value="2021-05-05" min="2021-01-01" max="2022-01-01" required>
+<br>
+</br>
+<label>Time:</label> 
+<input type="time" required>
+<br></br>
+<label>OHIP#</label>
+<input type="number" name="ohip" required>
+<br></br>
+<label>Email</label>
+<input type="text" name="email">
+<br></br>
+<label>Phone number</label>
+<input type="number" name="phone" required>
+<br></br>
+
+<button>RETURN TO MAIN</button>
 
 
 </form>
