--- a/vaccinePages/booking.html
+++ b/vaccinePages/booking.html
@@ -40,7 +40,8 @@
 <label>Phone number</label>
 <input type="number" name="phone" required>
 <br></br>
-
+<input type="submit">SUBMIT</input>
+<input type="reset">CLEAR</input>
 <button>RETURN TO MAIN</button>
 
 
