--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <ul>
     <li><a href="index.html">Main</a></li>
     <li><a href="vaccinePages/booking.html">Vaccine Booking</a></li>
-    <li><a href="vaccinePages/listing.html">Booking Listing</a></li>
+    <li><a href="vaccinePages/listing.html" onclick="run();">Booking Listing</a></li>
 </ul>
 
 
