--- a/vaccinePages/listing.html
+++ b/vaccinePages/listing.html
@@ -15,19 +15,36 @@
     <header> 
     </header>
 
-    <p>Please select the page to be redirected</p>
-<ul>
-    <li><a href="../index.html">Main</a></li>
-    <li><a href="booking.html">Vaccine Booking</a></li>
-    <li><a href="listing.html">Booking Listing</a></li>
-</ul>
+  
 
 <h2> Vaccine Appointment Bookings</h2>
-<ul id="lt">
+
+<table id="table"> 
+    <tr>
+        <th>Date</th>
+        <th> Time </th>
+        <th> OHIB</th>
+        <th> Email</th>
+        <th> Phone</th>
+   </tr>
+<!---- <tr id="lt"> 
+
+ </tr> -->
+</table>
+
+<!--<ul id="lt">
+    <li>Date  Time  Ohip  Mail  Phone</li>
   
-</ul>
+</ul>-->
+<br></br>
+<a href="../index.html">
+  <button class="style1">Back to Home</button>
+</a>
 
 
-<button>RETURN TO MAIN</button>
+<footer class="foot">
+    <h4> abdulnmo/Davis/2/Apr/21</h4>
+</footer>
+
 </body>
 </html>
