--- a/index.html
+++ b/index.html
@@ -13,21 +13,35 @@
 
 
 <body>
+
 <header> </header>
 
+ <div class="grid">
+<div class="nav">
+    <a href="index.html">
+        <button class="style">Home</button>
+      </a>
+      <a href="vaccinePages/booking.html">
+        <button class="style">Book vaccine</button>
+      </a>
 
-<p>Please select the page to be redirected</p>
-<ul>
-    <li><a href="index.html">Main</a></li>
-    <li><a href="vaccinePages/booking.html">Vaccine Booking</a></li>
-    <li><a href="vaccinePages/listing.html" onclick="run();">Booking Listing</a></li>
-</ul>
+      <a href="vaccinePages/listing.html">
+        <button class="style">Listing page</button>
+      </a>
 
 
+<!-- <ul class="nav">
+    <li class="style"><a href="index.html">Main</a></li>
+    <li class="style"><a href="vaccinePages/booking.html">Vaccine Booking</a></li>
+    <li class="style"></li><a href="vaccinePages/listing.html" onclick="run();">Booking Listing</a></li>
+</ul> -->
 
+</div>
 
-<footer id="foot">
+<footer class="foot">
     <h4> abdulnmo/Davis/2/Apr/21</h4>
 </footer>
+
+</div>
 </body>
 </html> 
